# work-zone-uav

./: .gitignore  DJI_0009.mov  GPS_Error_Testing.py  Integration.py  Kalman-Testing.py  MultipleVehicles.py  README.md  Trig.py  UAV_GUI.py  VehicleTracking.py  app.py  cameratest.py  cuda_opencv_instructions.md  det_position.py  video_metadata.txt
pi3_firmware/: CMakeLists.txt  MainProgram.cpp  UserConfig.txt  i2cTest.cpp  main.cpp
sample_telemetry/: const_speed.txt  takeoff_point_real.txt  test_1.txt  test_major.txt  test_major2.txt  test_major3.txt  test_major4.txt
